--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -11,22 +11,26 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>CreateAccount</td>
+<td>step02_AccountExistsError</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>clickSignIn</td>
+<td>step01_CreateAccountSuccess</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>setup</td>
+<td>beforeClass</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>beforeMethod</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
@@ -35,6 +39,6 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>quit</td>
+<td>afterClass</td>
 <td>&nbsp;</td></tr>
 </table>
