--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,12 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9dbc8c">  <td>22/05/31 18:02:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;EcommerceTest.quit()[pri:0, instance:tests.EcommerceTest@5d0a1059]">&lt;&lt;quit</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@292641216</td>   <td></td> </tr>
-<tr bgcolor="9dbc8c">  <td>22/05/31 18:01:53</td>   <td>-38345</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EcommerceTest.setup()[pri:0, instance:tests.EcommerceTest@5d0a1059]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@292641216</td>   <td></td> </tr>
-<tr bgcolor="9dbc8c">  <td>22/05/31 18:02:15</td>   <td>-15511</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EcommerceTest.clickSignIn()[pri:0, instance:tests.EcommerceTest@5d0a1059]">clickSignIn</td> 
-  <td>main@292641216</td>   <td></td> </tr>
-<tr bgcolor="9dbc8c">  <td>22/05/31 18:02:15</td>   <td>-15593</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EcommerceTest.CreateAccount()[pri:0, instance:tests.EcommerceTest@5d0a1059]">CreateAccount</td> 
-  <td>main@292641216</td>   <td></td> </tr>
+<tr bgcolor="9dbc8c">  <td>22/06/01 17:23:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EcommerceTest.step02_AccountExistsError()[pri:0, instance:tests.EcommerceTest@593aaf41]">step02_AccountExistsError</td> 
+  <td>main@539690370</td>   <td></td> </tr>
+<tr bgcolor="9dbc8c">  <td>22/06/01 17:23:23</td>   <td>-2648</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EcommerceTest.beforeMethod()[pri:0, instance:tests.EcommerceTest@593aaf41]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@539690370</td>   <td></td> </tr>
+<tr bgcolor="9dbc8c">  <td>22/06/01 17:23:23</td>   <td>-2648</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EcommerceTest.beforeMethod()[pri:0, instance:tests.EcommerceTest@593aaf41]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@539690370</td>   <td></td> </tr>
+<tr bgcolor="9dbc8c">  <td>22/06/01 17:23:30</td>   <td>4831</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;EcommerceTest.afterClass()[pri:0, instance:tests.EcommerceTest@593aaf41]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@539690370</td>   <td></td> </tr>
+<tr bgcolor="9dbc8c">  <td>22/06/01 17:22:56</td>   <td>-29364</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EcommerceTest.beforeClass()[pri:0, instance:tests.EcommerceTest@593aaf41]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@539690370</td>   <td></td> </tr>
+<tr bgcolor="9dbc8c">  <td>22/06/01 17:23:05</td>   <td>-19815</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EcommerceTest.step01_CreateAccountSuccess()[pri:0, instance:tests.EcommerceTest@593aaf41]">step01_CreateAccountSuccess</td> 
+  <td>main@539690370</td>   <td></td> </tr>
 </table>
