--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,24 +1,32 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9dbc8c">  <td>22/06/02 18:27:05</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EcommerceTest.beforeMethod()[pri:0, instance:tests.EcommerceTest@7c711375]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@593415583</td>   <td></td> </tr>
-<tr bgcolor="9dbc8c">  <td>22/06/02 18:27:09</td>   <td>3441</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;EcommerceTest.afterClass()[pri:0, instance:tests.EcommerceTest@7c711375]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@593415583</td>   <td></td> </tr>
-<tr bgcolor="9dbc8c">  <td>22/06/02 18:26:39</td>   <td>-26583</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EcommerceTest.step02_AccountExistsError()[pri:0, instance:tests.EcommerceTest@7c711375]">step02_AccountExistsError</td> 
-  <td>main@593415583</td>   <td></td> </tr>
-<tr bgcolor="9dbc8c">  <td>22/06/02 18:26:03</td>   <td>-62767</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EcommerceTest.step01_CreateAccountSuccess()[pri:0, instance:tests.EcommerceTest@7c711375]">step01_CreateAccountSuccess</td> 
-  <td>main@593415583</td>   <td></td> </tr>
-<tr bgcolor="9dbc8c">  <td>22/06/02 18:27:09</td>   <td>3426</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EcommerceTest.step04_SearchProductFeature()[pri:0, instance:tests.EcommerceTest@7c711375]">step04_SearchProductFeature</td> 
-  <td>main@593415583</td>   <td></td> </tr>
-<tr bgcolor="9dbc8c">  <td>22/06/02 18:27:05</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EcommerceTest.beforeMethod()[pri:0, instance:tests.EcommerceTest@7c711375]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@593415583</td>   <td></td> </tr>
-<tr bgcolor="9dbc8c">  <td>22/06/02 18:26:51</td>   <td>-14073</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EcommerceTest.step03_InvalidEmailAddressLoginError()[pri:0, instance:tests.EcommerceTest@7c711375]">step03_InvalidEmailAddressLoginError</td> 
-  <td>main@593415583</td>   <td></td> </tr>
-<tr bgcolor="9dbc8c">  <td>22/06/02 18:27:05</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EcommerceTest.beforeMethod()[pri:0, instance:tests.EcommerceTest@7c711375]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@593415583</td>   <td></td> </tr>
-<tr bgcolor="9dbc8c">  <td>22/06/02 18:25:47</td>   <td>-78704</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EcommerceTest.beforeClass()[pri:0, instance:tests.EcommerceTest@7c711375]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@593415583</td>   <td></td> </tr>
-<tr bgcolor="9dbc8c">  <td>22/06/02 18:27:05</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EcommerceTest.beforeMethod()[pri:0, instance:tests.EcommerceTest@7c711375]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@593415583</td>   <td></td> </tr>
+<tr bgcolor="9dbc8c">  <td>22/07/20 14:47:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EcommerceTest.beforeMethod()[pri:0, instance:tests.EcommerceTest@31fa1761]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1898325501</td>   <td></td> </tr>
+<tr bgcolor="9dbc8c">  <td>22/07/20 14:47:22</td>   <td>1765</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EcommerceTest.step04_SearchProductFeature()[pri:0, instance:tests.EcommerceTest@31fa1761]">step04_SearchProductFeature</td> 
+  <td>main@1898325501</td>   <td></td> </tr>
+<tr bgcolor="9dbc8c">  <td>22/07/20 14:46:49</td>   <td>-30569</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EcommerceTest.beforeClass()[pri:0, instance:tests.EcommerceTest@31fa1761]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1898325501</td>   <td></td> </tr>
+<tr bgcolor="9dbc8c">  <td>22/07/20 14:47:05</td>   <td>-15179</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EcommerceTest.step01_CreateAccountSuccess(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:tests.EcommerceTest@31fa1761]">step01_CreateAccountSuccess</td> 
+  <td>main@1898325501</td>   <td></td> </tr>
+<tr bgcolor="9dbc8c">  <td>22/07/20 14:47:22</td>   <td>1777</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;EcommerceTest.afterClass()[pri:0, instance:tests.EcommerceTest@31fa1761]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1898325501</td>   <td></td> </tr>
+<tr bgcolor="9dbc8c">  <td>22/07/20 14:47:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EcommerceTest.beforeMethod()[pri:0, instance:tests.EcommerceTest@31fa1761]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1898325501</td>   <td></td> </tr>
+<tr bgcolor="9dbc8c">  <td>22/07/20 14:47:05</td>   <td>-15179</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EcommerceTest.step01_CreateAccountSuccess(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:tests.EcommerceTest@31fa1761]">step01_CreateAccountSuccess</td> 
+  <td>main@1898325501</td>   <td></td> </tr>
+<tr bgcolor="9dbc8c">  <td>22/07/20 14:47:13</td>   <td>-6599</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EcommerceTest.step02_AccountExistsError(java.lang.String)[pri:0, instance:tests.EcommerceTest@31fa1761]">step02_AccountExistsError</td> 
+  <td>main@1898325501</td>   <td></td> </tr>
+<tr bgcolor="9dbc8c">  <td>22/07/20 14:47:13</td>   <td>-6599</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EcommerceTest.step02_AccountExistsError(java.lang.String)[pri:0, instance:tests.EcommerceTest@31fa1761]">step02_AccountExistsError</td> 
+  <td>main@1898325501</td>   <td></td> </tr>
+<tr bgcolor="9dbc8c">  <td>22/07/20 14:47:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EcommerceTest.beforeMethod()[pri:0, instance:tests.EcommerceTest@31fa1761]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1898325501</td>   <td></td> </tr>
+<tr bgcolor="9dbc8c">  <td>22/07/20 14:47:18</td>   <td>-2439</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EcommerceTest.step03_InvalidEmailAddressLoginError()[pri:0, instance:tests.EcommerceTest@31fa1761]">step03_InvalidEmailAddressLoginError</td> 
+  <td>main@1898325501</td>   <td></td> </tr>
+<tr bgcolor="9dbc8c">  <td>22/07/20 14:47:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EcommerceTest.beforeMethod()[pri:0, instance:tests.EcommerceTest@31fa1761]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1898325501</td>   <td></td> </tr>
+<tr bgcolor="9dbc8c">  <td>22/07/20 14:47:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EcommerceTest.beforeMethod()[pri:0, instance:tests.EcommerceTest@31fa1761]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1898325501</td>   <td></td> </tr>
+<tr bgcolor="9dbc8c">  <td>22/07/20 14:47:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EcommerceTest.beforeMethod()[pri:0, instance:tests.EcommerceTest@31fa1761]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1898325501</td>   <td></td> </tr>
 </table>
